WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249744
WebKit crash-looping under WebCore::interactionRegionForRenderedRegion after
256432@main
https://bugs.webkit.org/show_bug.cgi?id=249744
Summary
WebKit crash-looping under WebCore::interactionRegionForRenderedRegion after ...
Tim Horton
Reported
2022-12-21 14:06:00 PST
WebKit crash-looping under WebCore::interactionRegionForRenderedRegion after
256432@main
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2022-12-21 14:06:07 PST
<
rdar://problem/103465057
>
Tim Horton
Comment 2
2022-12-21 14:08:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7977
EWS
Comment 3
2022-12-21 15:52:30 PST
Committed
258220@main
(2e2c969c2b73): <
https://commits.webkit.org/258220@main
> Reviewed commits have been landed. Closing PR #7977 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug