Cherry-pick 2e2c969c2b73. rdar://problem/103465057

WebKit crash-looping under WebCore::interactionRegionForRenderedRegion after 256432@main
    https://bugs.webkit.org/show_bug.cgi?id=249744
    rdar://103465057

    Reviewed by Wenson Hsieh.

    * Source/WebCore/page/InteractionRegion.cpp:
    (WebCore::interactionRegionForRenderedRegion):
    Avoid dereferencing `element` if it is null. Both of these assignments
    change `element` but only if they find nonnull parents to ascend to, so we
    don't need to duplicate the check, we can just move it upwards.

    Canonical link: https://commits.webkit.org/258220@main

Canonical link: https://commits.webkit.org/257979.13@safari-7615.1.16.1-branch